--- a/pagina2 adicional.htm
+++ b/pagina2 adicional.htm
@@ -27,6 +27,6 @@ MM_reloadPage(true);
   <embed src="y2mate.com%20-%20t&#250;%20eres%20el%20pincel%20que%20pinta%20mi%20papel%20t&#250;%20llenas%20de%20color%20mi%20vida%20%20Lauri%20Garcia%20%20Miel%20Letra.mp3" width="841" height="114"></embed>
 </div>
 <div id="Layer2" style="position:absolute; left:24px; top:206px; width:766px; height:246px; z-index:2"><img src="san-valentin-34.gif" width="838" height="422"></div>
-<div id="Layer3" style="position:absolute; left:711px; top:174px; width:195px; height:27px; z-index:3; font-style: italic; font-weight: bold; font-size: 18px; color: #333333;"><a href="file:///C|/Users/karen_000/Desktop/sistemas/index2.html" target="_top">regresar</a></div>
+<div id="Layer3" style="position:absolute; left:711px; top:174px; width:195px; height:27px; z-index:3; font-style: italic; font-weight: bold; font-size: 18px; color: #333333;"><a href="rojo.htm" target="_top">regresar</a></div>
 </body>
 </html>
